307 news img wrapper (#308)
* #307 Fix img width in article

* #307 Add class to article body

* #307 Fix iframe width

--- a/web/themes/custom/girchi/css/custom.css
+++ b/web/themes/custom/girchi/css/custom.css
@@ -54,3 +54,11 @@ html{
     height: 100%;
 }
 
+.article-body .my-3 img {
+    max-width: 100%;
+}
+
+.article-body .my-3 iframe {
+    width: 100%;
+}
+
