293 promo page integration (#299)
* #293 Create theme sugessiton for promo page.

* #293 Create templates for promo page

* #293 Paragraph templates for promo page

* #293 Add markup files

* #293 Alter promo page paragraphs

* #293 Update config

* #293 Update language

* #293 Fix minor bugs

* #293 Update config

* #293 Update config

* #293 Language update

* #293 Update config

* #293 Update language

* #293 Create custom webform templates

* #293 Css for web forms

* #293 Create modals for student and teacher registration

* #293 Fix markup bugs

--- a/web/themes/custom/girchi/css/custom.css
+++ b/web/themes/custom/girchi/css/custom.css
@@ -54,6 +54,14 @@ html{
     height: 100%;
 }
 
+.webform-submission-student-registration-form input{
+    margin: 0!important;
+}
+
+.webform-submission-teacher-registration-form input{
+    margin: 0!important;
+}
+
 .article-body .my-3 img {
     max-width: 100%;
 }
