Add field to template and declare path in settings.php

--- a/web/themes/custom/girchi/templates/webform/webform--teacher-registration.html.twig
+++ b/web/themes/custom/girchi/templates/webform/webform--teacher-registration.html.twig
@@ -67,9 +67,13 @@
                 {{ element.elements.topics_to_teach }}
             </div>
         </div>
+        <div class="col-12">
+            <div class="custom-file">
+                {{element.elements.document_attachment}}
+            </div>
+        </div>
     </div>
     <div class="text-center">
         {{ element.elements.actions }}
     </div>
 </form>
-
