--- a/web/modules/custom/girchi_utils/templates/supporter-registration.html.twig
+++ b/web/modules/custom/girchi_utils/templates/supporter-registration.html.twig
@@ -62,7 +62,7 @@
                             <label class="form-label" for="phone-number"
                             >{{ "Phone number" | t }}</label
                             >
-                            {{ form.field_phone }}
+                            {{ form.field_tel }}
                         </div>
                         <div class="form-group">
                             <label class="form-label" for="email">{{ "Email" | t }}</label>
