--- a/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
+++ b/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
@@ -45,7 +45,7 @@
             </div>
             <div class="form-group mb-2">
               <label class="form-label" for="phone">{{ "Phone number" | t }}</label>
-              {{ element.field_phone }}
+              {{ element.field_tel }}
             </div>
             <div class="border bg-dark-white border-dashed rounded px-4 pt-4  mb-4 mt-4">
               <h6 class="text-uppercase text-success font-weight-bold">
