Add user id as hidden input

--- a/web/modules/custom/girchi_users/templates/girchi-users.html.twig
+++ b/web/modules/custom/girchi_users/templates/girchi-users.html.twig
@@ -18,6 +18,7 @@
         <div class="row">
             <div class="col-xs-12 col-md-7 col-lg-4 m-auto">
                 <form class="my-4">
+                    <input type="hidden" value="{{ uid }}" name="uid" id="userid">
                     <div class="form-group">
                         <label class="form-label" for="password">პაროლი</label>
                         <input
