Add comment in user form template

--- a/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
+++ b/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
@@ -131,6 +131,7 @@
             </div>
 
             {#Modal#}
+            {#Modal is sitting inside of form because of user form custom image set in form alter#}
             <div class="modal fade" id="changeUserEmail" tabindex="-1" role="dialog" aria-labelledby="changeUserEmailTitle"
                  aria-hidden="true">
                 <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
@@ -171,7 +172,7 @@
                     </div>
                 </div>
             </div>
-
+{#            End Of Modal#}
         </form>
     </div>
 </div>
