--- a/web/themes/custom/girchi/templates/views/views-view-fields--party-list.html.twig
+++ b/web/themes/custom/girchi/templates/views/views-view-fields--party-list.html.twig
@@ -31,28 +31,122 @@
  * @ingroup themeable
  */
 #}
-<li class="list-group-item pl-group-item">
-    <div class="d-flex w-100 align-items-center py-0 py-sm-3 px-0 flex-wrap flex-md-nowrap">
-        <span class="text-warning d-block font-size-4 font-weight-bold politician-rank mr-3">
-            {{ '#' ~ fields.field_rating_in_party_list.content | striptags }}
-        </span>
-        <div class="rounded-circle overflow-hidden d-inline-block mx-auto mx-sm-0 mb-3 mb-sm-0">
-            <img src="{{ fields.user_picture.content | striptags }}" width="60" class="rounded">
+{% set uid = fields.uid.content | striptags | replace({"\n":'', "\r":''}) %}
+{% set supporter_count = supporters[uid]['supporter_count'] %}
+{% set img_url = fields.user_picture.content | striptags  | replace({"\n":'', "\r":''}) %}
+{% set default_img_url = theme_path('images/avatar50x50.png', 1) %}
+<tr>
+<th
+        scope="row"
+        class="pl-3 w-auto w-md-80-px text-center align-middle"
+    >
+                        <span
+                            class="font-size-4 font-size-xl-7 text-dark-silver font-weight-normal"
+                        >{{ fields.field_rating_in_party_list.content | striptags }}</span
+                        >
+    </th>
+    <td class="align-middle">
+        <div class="d-flex w-100 align-items-center my-2">
+            <a
+                href="{{ path('entity.user.canonical', {'user' : uid}) }}"
+                class="rounded-circle overflow-hidden d-none d-md-block"
+            >
+                <img
+                    src="{{ img_url ? img_url : default_img_url }}"
+                    class="rounded w-100"
+                    alt="..."
+                />
+            </a>
+            <h6
+                class="w-100 w-sm-auto text-uppercase line-height-1-2 font-size-3 font-size-md-3 font-size-xl-4 mb-0 mx-0 mx-md-3"
+            >
+                <a
+                    href="{{ path('entity.user.canonical', {'user' : uid}) }}"
+                    class="d-inline-block text-hover-success"
+                >
+                              <span class="text-decoration-none d-inline-block">
+                                <span>{{ fields.field_first_name.content }}</span>
+                                <span class="font-weight-bold"
+                                >{{ fields.field_last_name.content }}</span
+                                >
+                              </span>
+                </a>
+                <span
+                    class="d-none d-md-flex font-size-1 font-size-lg-3 text-grey mt-1 justify-content-center justify-content-sm-start"
+                >
+                              {{ 'Politician' | t }}
+                            </span>
+                <span
+                    class="text-warning font-size-4 font-weight-bold d-block d-md-none"
+                >{{ fields.field_political_ged .content }} <i class="icon-ged font-size-3"></i
+                    ></span>
+            </h6>
         </div>
-        <h6 class="text-center text-sm-left w-100 w-sm-auto text-uppercase line-height-1-2 font-size-4 font-size-md-3 font-size-xl-4 mb-0 mx-2 mx-xl-3">
-                          <span class="text-decoration-none d-inline-block">
-                            <span>{{ fields.field_first_name.content }}</span>
-                            <span class="font-weight-bold">{{ fields.field_last_name.content }}</span>
-                          </span>
-            <span
-                class="d-flex  font-size-1 font-size-lg-3 text-grey mt-1 justify-content-center justify-content-sm-start">
-                                                      {{ 'Politician' | t }}
-                                                    </span>
-            <span
-                class="d-flex  font-size-1 font-size-lg-3 text-success mt-1 justify-content-center justify-content-sm-start">
-                                                 <i class="icon-ged line-height-1-1"></i>
-                                                      {{ fields.field_political_ged .content }}
-                                                    </span>
-        </h6>
-    </div>
-</li>
+    </td>
+    <td class="text-right text-md-center align-middle">
+        <ul
+            class="list-unstyled m-0 align-items-center d-none d-md-flex"
+        >
+            {% if supporter_count > 4 %}
+                {% for i in 0..3 %}
+                    <li class="d-inline-flex align-items-center">
+                        <a
+                            title="{{ supporters[uid]['users_info'][i]['name'] }}"
+                            href="#"
+                            class="rounded-circle overflow-hidden d-inline-block m-1 politician-modal"
+                            data-toggle="modal"
+                            data-target="#supporters"
+                            data-uid="{{ uid }}"
+                        >
+                            <img
+                                src="{{ supporters[uid]['users_info'][i]['img_url'] }}"
+                                class="rounded"
+                                width="34"
+                                alt="..."
+                            />
+                        </a>
+                    </li>
+                {% endfor %}
+                <li class="d-inline-flex align-items-center">
+                    <a
+                        href="#"
+                        data-toggle="modal"
+                        data-target="#supporters"
+                        class="btn btn-light btn-sm m-1 px-2 bg-hover-success text-hover-white politician-modal"
+                        data-uid="{{ uid }}"
+                    >
+                        {{ supporter_count - 4 }} +
+                    </a>
+                </li>
+            {% else %}
+                {% for supporter in supporters[uid]['users_info'] %}
+                    <li class="d-inline-flex align-items-center">
+                        <a
+                            title="{{ supporter.name }}"
+                            href="#"
+                            class="rounded-circle overflow-hidden d-inline-block m-1 politician-modal"
+                            data-toggle="modal"
+                            data-target="#supporters"
+                            data-uid="{{ uid }}"
+                        >
+                            <img
+                                src="{{ supporter.img_url }}"
+                                class="rounded"
+                                width="34"
+                                alt="..."
+                            />
+                        </a>
+                    </li>
+                {% endfor %}
+            {% endif %}
+        </ul>
+    </td>
+    <td
+        class="align-middle text-center d-none d-md-table-cell"
+    >
+                        <span
+                            class="text-warning font-size-4 font-size-xl-5 font-weight-bold text-nowrap"
+                        >{{ fields.field_political_ged.content }} <i class="icon-ged font-size-4"></i
+                            ></span>
+    </td>
+</tr>
