#439 Check if news is checked.

--- a/web/themes/custom/girchi/templates/nodes/node--article--full.html.twig
+++ b/web/themes/custom/girchi/templates/nodes/node--article--full.html.twig
@@ -43,9 +43,9 @@
                     {% if logged_in %}
                         <div class="form-group">
                         <span class="form-checkbox">
-                            <span class="form-checkbox-input">
+                            <span class="form-checkbox-input {{ checkboxValue ? 'checked' : '' }}">
                                 <input type="checkbox" class="form-control form-checkbox" id="favorite_news"
-                                       data-node-id="{{ node.id }}" {{ checkboxValue ? 'checked' : '' }}>
+                                       data-node-id="{{ node.id }}" >
                         </span>
                             <label class="form-checkbox-label font-size-1 text-grey font-weight-bold border-dark-silver "
                                    for="favorite_news">{{ 'Add to favorite' | t }}</label>
