--- a/web/modules/custom/girchi_my_party_list/templates/girchi-my-party-list.html.twig
+++ b/web/modules/custom/girchi_my_party_list/templates/girchi-my-party-list.html.twig
@@ -1,3 +1,5 @@
+<div class="parryListMessages my-2">
+</div>
 <div class="card mt-0 mt-md-3 mt-lg-0 mb-2 mb-lg-3">
     <div class="card-body p-3 p-md-4">
         <div class="d-flex flex-column flex-md-row">
@@ -32,7 +34,7 @@
             </div>
         </div>
         <hr class="mx-md-n4  mt-3 mt-md-4" />
-        <form action="{{ path('girchi_my_party_list.party_list_controller_updateUser') }}" method="post">
+        <form action="{{ path('girchi_my_party_list.party_list_controller_updateUser') }}" method="post" id="partyListForm">
             <ul class="list-group my-3 my-md-4 pl-group">
                 {% for partyMember in my_party_list  %}
                     <li class="list-group-item pl-group-item">
