--- a/web/modules/custom/girchi_donations/templates/girchi-donations.html.twig
+++ b/web/modules/custom/girchi_donations/templates/girchi-donations.html.twig
@@ -121,14 +121,22 @@
                                                 {{ form_single.donation_aim }}
                                             </div>
                                         </div>
-                                        <div class="form-group">
+                                        <div class="form-group" >
                                             <label class="form-label" for="politicians"
-                                            >{{ 'Donation to politician'|t }}</label
-                                            >
-                                            <div class="form-control form-control-lg">
-                                                {{ form_single.politicians}}
+                                            >{{ 'Donation to politician'|t }}</label>
+                                            <div id="politician-autocomplete">
+                                                <input type="text"
+                                                       class="form-control form-control-lg"
+                                                       id="politicians-donation">
+                                            <div class="politicians-list" style="border-radius: 50px">
+                                                <ul class="list-group pl-group politiciansList" style=" list-style: none"></ul>
+                                            </div>
+                                            </div>
+                                            <div id="autocomplete-result">
+
                                             </div>
                                         </div>
+                                        {{ form_single.politician_id }}
                                         {{ form_single.currency }}
                                         {{ form_single.submit }}
                                     </form>
