hide sidebar account menu for annonimous users

--- a/web/modules/custom/girchi_utils/templates/user_profile.html.twig
+++ b/web/modules/custom/girchi_utils/templates/user_profile.html.twig
@@ -1,3 +1,4 @@
+{% if (logged_in) %}
 <div class="card bg-dark-white border-bottom rounded-bottom-0">
     <div class="card-body text-center">
         <div class="rounded-circle overflow-hidden d-inline-block">
@@ -42,3 +43,4 @@
         {% endif %}
     </div>
 </div>
+{% endif %}
