--- a/web/themes/custom/girchi/templates/blocks/block--system-menu-block--account.html.twig
+++ b/web/themes/custom/girchi/templates/blocks/block--system-menu-block--account.html.twig
@@ -1,8 +1,9 @@
-<div
+{% if (logged_in) %}
+    <div
         class="card rounded-top-lg-0  mt-3 mt-lg-0 mb-3 mb-lg-0 overflow-hidden"
->
-    <div class="card-header d-flex d-lg-none px-3 px-xl-4">
-        <button
+    >
+        <div class="card-header d-flex d-lg-none px-3 px-xl-4">
+            <button
                 class="navbar-toggler d-flex d-lg-none"
                 type="button"
                 data-toggle="collapse"
@@ -10,19 +11,20 @@
                 aria-controls="categories"
                 aria-expanded="false"
                 aria-label="Toggle navigation"
-        >
+            >
                   <span
-                          class="font-size-2 text-uppercase font-weight-bold text-grey"
+                      class="font-size-2 text-uppercase font-weight-bold text-grey"
                   >ჩემი კაბინეტი</span
                   >
-            <i
+                <i
                     class="icon-menu-three-horizontal-lines-symbol font-size-4 text-success"
-            ></i>
-        </button>
-    </div>
+                ></i>
+            </button>
+        </div>
 
-    <div class="card-body p-0">
-        {{ content }}
+        <div class="card-body p-0">
+            {{ content }}
+        </div>
     </div>
-</div>
+{% endif %}
 
