--- a/web/modules/custom/girchi_donations/templates/girchi-donations.html.twig
+++ b/web/modules/custom/girchi_donations/templates/girchi-donations.html.twig
@@ -134,6 +134,12 @@
                                             </div>
                                             <div id="autocomplete-result">
 
+
+                                                <div class="hidden-politician">
+                                                    <input id="hidden-first-name" type="hidden" value="{{ current_politician[0].first_name ?? '' }}">
+                                                    <input id="hidden-last-name" type="hidden" value="{{ current_politician[0].last_name ?? '' }}">
+                                                    <img src="{{ current_politician[0].image is defined ? image_style_url(current_politician[0].image, 'avatar_xs') : theme_path() ~ "/images/avatar35x35.png" }}" id="hidden-image" hidden>
+                                                </div>
                                             </div>
                                         </div>
                                         {{ form_single.politician_id }}
