--- a/web/themes/custom/girchi/css/custom.css
+++ b/web/themes/custom/girchi/css/custom.css
@@ -81,3 +81,17 @@ input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
+
+#politician-autocomplete{
+  position: relative;
+}
+
+.politicians-list{
+  position: absolute;
+  width: 100%;
+  z-index: 10;
+}
+
+.politiciansList{
+  list-style: none;
+}
