#464 Fix top partner's block hieght.

--- a/web/modules/custom/girchi_utils/templates/top-topics.html.twig
+++ b/web/modules/custom/girchi_utils/templates/top-topics.html.twig
@@ -46,7 +46,7 @@
         <p class="display-1">{{ "There is no content"|t }}</p>
     {% endif %}
     <div class="col-md-12 col-lg-4">
-        <div class="row">
+        <div class="row w-100">
             <div class="col-sm-12 col-md-5 col-lg-12">
                 <!-- Start of banner -->
                 <div
