--- a/web/modules/custom/girchi_donations/templates/girchi-donations.html.twig
+++ b/web/modules/custom/girchi_donations/templates/girchi-donations.html.twig
@@ -201,7 +201,7 @@
                                                 >{{ 'Periodicity'|t }}</label
                                                 >
                                                 <div class="form-control form-control-lg">
-                                                    {{ form_multiple.periodicity }}
+                                                    {{ form_multiple.frequency }}
                                                 </div>
                                             </div>
                                             <div class="form-group w-100 w-md-50  pl-sm-2">
