--- a/web/modules/custom/girchi_donations/templates/girchi-donations-success.html.twig
+++ b/web/modules/custom/girchi_donations/templates/girchi-donations-success.html.twig
@@ -21,11 +21,20 @@
                             class="icon-tick-inside-circle font-size-9 text-success"
                     ></i>
                   </span>
-                            <h5
+                            {% if regular_donation %}
+                                <h5
                                     class="text-uppercase font-weight line-height-1-3 font-weight-bold text-success text-center mt-3 mb-3 mb-sm-5"
-                            >
-                                {{'Transaction was successfull'|t}}
-                            </h5>
+                                >
+                                    {{'Regular donation was activated'|t}}
+                                </h5>
+                            {% else %}
+                                <h5
+                                    class="text-uppercase font-weight line-height-1-3 font-weight-bold text-success text-center mt-3 mb-3 mb-sm-5"
+                                >
+                                    {{'Transaction was successfull'|t}}
+                                </h5>
+                            {% endif %}
+
                             {% if auth %}
                             <div
                                     class="w-100 d-flex flex-column align-items-center mb-4 mb-sm-5"
@@ -45,12 +54,14 @@
                             >
                                 {{'Profile'|t}}
                             </a>
+                            {% if regular_donation is null %}
                             <a
                                     href="{{ path('girchi_donations.donations_controller_index') }}"
                                     class="btn btn-warning text-uppercase btn-block btn-lg my-3 my-lg-4 text-nowrap"
                             >
                                 {{'Donate Again'|t}}
                             </a>
+                            {% endif %}
                         </div>
                     </div>
                     <div class="col-md-12 col-lg-6">
