#496 Hide scroll from ged transaction view.

--- a/web/themes/custom/girchi/templates/views/views-view--ged-transaction--public-page.html.twig
+++ b/web/themes/custom/girchi/templates/views/views-view--ged-transaction--public-page.html.twig
@@ -47,7 +47,7 @@
     {% endif %}
 
     {{ attachment_before }}
-    <div class="card mt-0 mt-md-3 mt-lg-0 mb-2 mb-lg-3 overflow-hidden">
+    <div class="card mt-0 mt-md-3 mt-lg-0 mb-2 mb-lg-3">
         <div class="card-body p-0">
             <div
                 class="d-flex flex-column flex-md-row px-3 px-md-4 py-3 align-items-md-center"
@@ -60,7 +60,7 @@
 
             {% if rows -%}
 
-                <div class="table-responsive">
+                <div class="table-responsive overflow-hidden">
                     {{ rows }}
                 </div>
 
