#496 Enable horizontal scroll in ged transacitons view.

--- a/web/themes/custom/girchi/templates/views/views-view--ged-transaction--public-page.html.twig
+++ b/web/themes/custom/girchi/templates/views/views-view--ged-transaction--public-page.html.twig
@@ -60,7 +60,7 @@
 
             {% if rows -%}
 
-                <div class="table-responsive overflow-hidden">
+                <div class="table-responsive" style="overflow-y: hidden">
                     {{ rows }}
                 </div>
 
