--- a/web/modules/custom/girchi_donations/templates/girchi-donations-success.html.twig
+++ b/web/modules/custom/girchi_donations/templates/girchi-donations-success.html.twig
@@ -21,12 +21,26 @@
                             class="icon-tick-inside-circle font-size-9 text-success"
                     ></i>
                   </span>
-                            {% if regular_donation %}
-                                <h5
-                                    class="text-uppercase font-weight line-height-1-3 font-weight-bold text-success text-center mt-3 mb-3 mb-sm-5"
-                                >
-                                    {{'Regular donation was activated'|t}}
-                                </h5>
+                        {% if regular_donation %}
+                            <h5
+                                class="text-uppercase font-weight line-height-1-3 font-weight-bold text-success text-center mt-3 mb-3 mb-sm-5"
+                            >
+                                {{'Regular donation was activated'|t}}
+                            </h5>
+                            <div class="d-flex align-items-center m-0 py-2 flex-wrap">
+                                <div>
+                                    <span class="d-block font-size-2 line-height-1-2 text-grey">{{ 'Periodicity'|t }}</span>
+                                    <span class="d-block font-size-3 line-height-1-2 text-success font-weight-bold">{{ reg_data.frequency }} {{ 'Month'|t }}</span>
+                                </div>
+                                <div class="ml-4">
+                                    <span class="d-block font-size-2 line-height-1-2 text-grey">{{'Day'|t}}</span>
+                                    <span class="d-block font-size-3 line-height-1-2 text-success font-weight-bold">{{ reg_data.day }}</span>
+                                </div>
+                                <div class="ml-4">
+                                     <span class="d-block font-size-2 line-height-1-2 text-grey">{{'Payment execution date'|t}}</span>
+                                    <span class="d-block font-size-3 line-height-1-2 text-success font-weight-bold">{{reg_data.date}}</span>
+                                </div>
+                            </div>
                             {% else %}
                                 <h5
                                     class="text-uppercase font-weight line-height-1-3 font-weight-bold text-success text-center mt-3 mb-3 mb-sm-5"
